--- a/src/components/SocialCard.css
+++ b/src/components/SocialCard.css
@@ -26,3 +26,10 @@
   height: 60px;
   margin-left: 20px;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .SocialCard {
+    margin-left: 1.6em;
+    width: 20em;
+  }
+}
