--- a/src/components/SocialCard.css
+++ b/src/components/SocialCard.css
@@ -1,6 +1,5 @@
 .SocialCard {
   background: #f7f7f7;
-  background-repeat: no-repeat;
   border-radius: 5px;
   box-shadow: -7px 10px 15px rgb(37, 46, 53);
   display: flex;
@@ -13,6 +12,8 @@
 }
 
 .SocialCard__header {
+  /* background-repeat: no-repeat !important; */
+  background-position: center top -120px !important;
   border-bottom: 1px solid rgb(187, 186, 186);
   height: 65%;
   padding-top: 17px;
